fix divider ignoring .visible-sm

--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -83,7 +83,6 @@
 
   .divider {
     background: $gray-lighter;
-    display: block;
     height: 1px;
     margin: 9px -15px;
   }
